# cortex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  a2a-hub.html  cortex-birth-replay.html  demo.html  dispatcher.html  docs.html  forge.html  index.html  pyproject.toml  vibe-replay.html
.github/workflows/: publish.yml  test.yml  tests.yml
cortex_cli/: __init__.py  agent.py  config.py  detect.py  errors.py  feedback.py  health.py  main.py  process.py  services.py  setup.py
docs/: ARCHITECTURE.md
examples/: README.md
scripts/: demo.tape  publish.sh
tests/: test_health.py  test_process.py
