[project]
name = "cortex-workspace"
version = "0.1.0"
description = "Cortex monorepo — personal agent infrastructure stack"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
